--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 h1{
+    margin-top: 40px;
     background: #472a13;
     color: #aca43a;
     text-align: center;
@@ -221,5 +222,20 @@ button:hover {
        text-align: center;
 }
 
+.auth-links {
+    position: absolute;
+    top: 10px;
+    right: 50px;
+    font-size: 20px;
+}
 
+.auth-links a {
+    margin-left: 30px;
+    text-decoration: none;
+    color: #476600;
+}
+
+.auth-links a:hover {
+    text-decoration: underline;
+}
 
