--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,3 +239,11 @@ button:hover {
     text-decoration: underline;
 }
 
+.welcome {
+    position: absolute;
+    top: 10px;
+    left: 50%;          
+    transform: translateX(-50%); 
+    font-size: 20px;
+    color: #666e1e;
+}
